# srt-rs

./: .gitignore  .gitmodules  Cargo.toml
.cargo/: config.toml
examples/: client.rs  server.rs
libsrt-sys/: Cargo.toml  build.rs
src/: error.rs  examples.rs  lib.rs  main.rs  socket.rs
