[package]
name = "srt-rs"
version = "0.4.0"
authors = ["Hieu Nguyen <nthieu173@gmail.com>", "Ori Sky Farrell <git@ori.mx>"]
edition = "2018"
license = "MPL-2.0"
description = "Idiomatic rust binding to libsrt"
repository = "https://github.com/Nachompiras/srt-rs"
readme = "README.md"

[dependencies]
libsrt-sys = { path = "libsrt-sys", version = "1.5.4" }
libc = "0.2.177"
futures = "0.3"
bytes = "1.10.1"

os_socketaddr = { version = "0.2.5" }
tokio = { version = "1.48.0", features = ["full","rt"] }

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winsock2"] }
